--- a/notebook/data/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/data/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -2181,7 +2181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
