Data Transformation done

--- a/notebook/data/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/data/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -1656,6 +1656,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "835a6363",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'numeric_features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mnumeric_features\u001b[49m\n",
+      "\u001b[31mNameError\u001b[39m: name 'numeric_features' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"numerical_columns = ['writing_score','reading_score']  \n",
+    "categorical_columns =['gender', \n",
+    "                      'race_ethnicity', \n",
+    "                      'parental_level_of_education', \n",
+    "                      'lunch',\n",
+    "                      'test_preparation_course']\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "id": "06017643",
    "metadata": {},
